grammar/pseudoCodeParser.js
// Generated from pseudoCodeParser.g4 by ANTLR 4.7.2
// jshint ignore: start
var antlr4 = require('antlr4/index');
var pseudoCodeParserListener = require('./pseudoCodeParserListener').pseudoCodeParserListener;
var grammarFileName = "pseudoCodeParser.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'Sea'", "'Haga que'", "':'", "'.'", "'haga'", 
                     null, "'es'", "'por el contrario'", null, null, "'mientras'", 
                     "'la lista de'", "'la funci\u00F3n que'", null, null, 
                     null, "'expresi\u00F3n l\u00F3gica'", null, "'Imprimir'", 
                     null, "'Continuar'", "'o'", "'y'", "'no'", null, null, 
                     null, null, "'m\u00E1s'", "'menos'", "'m\u00F3dulo'", 
                     null, null, "'\u00BF'", "'?'", "' '", "','", "'Cierto'", 
                     "'Falso'" ];

var symbolicNames = [ null, "DEF", "REWRITE", "SENTENCE", "END", "DO", "ASSIG", 
                      "IS", "ELSE", "EQUAL", "THEN", "WHILE", "LIST", "FUNCT", 
                      "PARAM", "NUMBERDEF", "STRINGDEF", "BOOLDEF", "INDEX", 
                      "PRINT", "VALUE", "CONTINUE", "OR", "AND", "NOT", 
                      "GT", "LT", "GTE", "LTE", "ADD", "SUB", "MOD", "DIV", 
                      "MULT", "OPQUEST", "CLQUEST", "SPACE", "COMA", "TRUE", 
                      "FALSE", "COMMENT", "NUMBER", "VAR", "STRING" ];

var ruleNames =  [ "root", "expr", "var_declaration", "element", "func_def", 
                   "param_def", "multi_param_def", "num_expr", "bool_expr", 
                   "str_expr" ];

function pseudoCodeParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

pseudoCodeParser.prototype = Object.create(antlr4.Parser.prototype);
pseudoCodeParser.prototype.constructor = pseudoCodeParser;

Object.defineProperty(pseudoCodeParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

pseudoCodeParser.EOF = antlr4.Token.EOF;
pseudoCodeParser.DEF = 1;
pseudoCodeParser.REWRITE = 2;
pseudoCodeParser.SENTENCE = 3;
pseudoCodeParser.END = 4;
pseudoCodeParser.DO = 5;
pseudoCodeParser.ASSIG = 6;
pseudoCodeParser.IS = 7;
pseudoCodeParser.ELSE = 8;
pseudoCodeParser.EQUAL = 9;
pseudoCodeParser.THEN = 10;
pseudoCodeParser.WHILE = 11;
pseudoCodeParser.LIST = 12;
pseudoCodeParser.FUNCT = 13;
pseudoCodeParser.PARAM = 14;
pseudoCodeParser.NUMBERDEF = 15;
pseudoCodeParser.STRINGDEF = 16;
pseudoCodeParser.BOOLDEF = 17;
pseudoCodeParser.INDEX = 18;
pseudoCodeParser.PRINT = 19;
pseudoCodeParser.VALUE = 20;
pseudoCodeParser.CONTINUE = 21;
pseudoCodeParser.OR = 22;
pseudoCodeParser.AND = 23;
pseudoCodeParser.NOT = 24;
pseudoCodeParser.GT = 25;
pseudoCodeParser.LT = 26;
pseudoCodeParser.GTE = 27;
pseudoCodeParser.LTE = 28;
pseudoCodeParser.ADD = 29;
pseudoCodeParser.SUB = 30;
pseudoCodeParser.MOD = 31;
pseudoCodeParser.DIV = 32;
pseudoCodeParser.MULT = 33;
pseudoCodeParser.OPQUEST = 34;
pseudoCodeParser.CLQUEST = 35;
pseudoCodeParser.SPACE = 36;
pseudoCodeParser.COMA = 37;
pseudoCodeParser.TRUE = 38;
pseudoCodeParser.FALSE = 39;
pseudoCodeParser.COMMENT = 40;
pseudoCodeParser.NUMBER = 41;
pseudoCodeParser.VAR = 42;
pseudoCodeParser.STRING = 43;

pseudoCodeParser.RULE_root = 0;
pseudoCodeParser.RULE_expr = 1;
pseudoCodeParser.RULE_var_declaration = 2;
pseudoCodeParser.RULE_element = 3;
pseudoCodeParser.RULE_func_def = 4;
pseudoCodeParser.RULE_param_def = 5;
pseudoCodeParser.RULE_multi_param_def = 6;
pseudoCodeParser.RULE_num_expr = 7;
pseudoCodeParser.RULE_bool_expr = 8;
pseudoCodeParser.RULE_str_expr = 9;

function RootContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = pseudoCodeParser.RULE_root;
    return this;
}

RootContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RootContext.prototype.constructor = RootContext;

RootContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

RootContext.prototype.SPACE = function() {
    return this.getToken(pseudoCodeParser.SPACE, 0);
};

RootContext.prototype.root = function() {
    return this.getTypedRuleContext(RootContext,0);
};

RootContext.prototype.EOF = function() {
    return this.getToken(pseudoCodeParser.EOF, 0);
};

RootContext.prototype.enterRule = function(listener) {
    if(listener instanceof pseudoCodeParserListener ) {
        listener.enterRoot(this);
	}
};

RootContext.prototype.exitRule = function(listener) {
    if(listener instanceof pseudoCodeParserListener ) {
        listener.exitRoot(this);
	}
};




pseudoCodeParser.RootContext = RootContext;

pseudoCodeParser.prototype.root = function() {

    var localctx = new RootContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, pseudoCodeParser.RULE_root);
    try {
        this.state = 25;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case pseudoCodeParser.DEF:
        case pseudoCodeParser.REWRITE:
        case pseudoCodeParser.PRINT:
            this.enterOuterAlt(localctx, 1);
            this.state = 20;
            this.expr();
            this.state = 21;
            this.match(pseudoCodeParser.SPACE);
            this.state = 22;
            this.root();
            break;
        case pseudoCodeParser.EOF:
            this.enterOuterAlt(localctx, 2);
            this.state = 24;
            this.match(pseudoCodeParser.EOF);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ExprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = pseudoCodeParser.RULE_expr;
    return this;
}

ExprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExprContext.prototype.constructor = ExprContext;

ExprContext.prototype.DEF = function() {
    return this.getToken(pseudoCodeParser.DEF, 0);
};

ExprContext.prototype.SPACE = function() {
    return this.getToken(pseudoCodeParser.SPACE, 0);
};

ExprContext.prototype.var_declaration = function() {
    return this.getTypedRuleContext(Var_declarationContext,0);
};

ExprContext.prototype.REWRITE = function() {
    return this.getToken(pseudoCodeParser.REWRITE, 0);
};

ExprContext.prototype.PRINT = function() {
    return this.getToken(pseudoCodeParser.PRINT, 0);
};

ExprContext.prototype.VAR = function() {
    return this.getToken(pseudoCodeParser.VAR, 0);
};

ExprContext.prototype.END = function() {
    return this.getToken(pseudoCodeParser.END, 0);
};

ExprContext.prototype.enterRule = function(listener) {
    if(listener instanceof pseudoCodeParserListener ) {
        listener.enterExpr(this);
	}
};

ExprContext.prototype.exitRule = function(listener) {
    if(listener instanceof pseudoCodeParserListener ) {
        listener.exitExpr(this);
	}
};




pseudoCodeParser.ExprContext = ExprContext;

pseudoCodeParser.prototype.expr = function() {

    var localctx = new ExprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, pseudoCodeParser.RULE_expr);
    try {
        this.state = 37;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case pseudoCodeParser.DEF:
            this.enterOuterAlt(localctx, 1);
            this.state = 27;
            this.match(pseudoCodeParser.DEF);
            this.state = 28;
            this.match(pseudoCodeParser.SPACE);
            this.state = 29;
            this.var_declaration();
            break;
        case pseudoCodeParser.REWRITE:
            this.enterOuterAlt(localctx, 2);
            this.state = 30;
            this.match(pseudoCodeParser.REWRITE);
            this.state = 31;
            this.match(pseudoCodeParser.SPACE);
            this.state = 32;
            this.var_declaration();
            break;
        case pseudoCodeParser.PRINT:
            this.enterOuterAlt(localctx, 3);
            this.state = 33;
            this.match(pseudoCodeParser.PRINT);
            this.state = 34;
            this.match(pseudoCodeParser.SPACE);
            this.state = 35;
            this.match(pseudoCodeParser.VAR);
            this.state = 36;
            this.match(pseudoCodeParser.END);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Var_declarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = pseudoCodeParser.RULE_var_declaration;
    return this;
}

Var_declarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Var_declarationContext.prototype.constructor = Var_declarationContext;

Var_declarationContext.prototype.VAR = function() {
    return this.getToken(pseudoCodeParser.VAR, 0);
};

Var_declarationContext.prototype.END = function() {
    return this.getToken(pseudoCodeParser.END, 0);
};

Var_declarationContext.prototype.SPACE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(pseudoCodeParser.SPACE);
    } else {
        return this.getToken(pseudoCodeParser.SPACE, i);
    }
};


Var_declarationContext.prototype.ASSIG = function() {
    return this.getToken(pseudoCodeParser.ASSIG, 0);
};

Var_declarationContext.prototype.VALUE = function() {
    return this.getToken(pseudoCodeParser.VALUE, 0);
};

Var_declarationContext.prototype.element = function() {
    return this.getTypedRuleContext(ElementContext,0);
};

Var_declarationContext.prototype.FUNCT = function() {
    return this.getToken(pseudoCodeParser.FUNCT, 0);
};

Var_declarationContext.prototype.func_def = function() {
    return this.getTypedRuleContext(Func_defContext,0);
};

Var_declarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof pseudoCodeParserListener ) {
        listener.enterVar_declaration(this);
	}
};

Var_declarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof pseudoCodeParserListener ) {
        listener.exitVar_declaration(this);
	}
};




pseudoCodeParser.Var_declarationContext = Var_declarationContext;

pseudoCodeParser.prototype.var_declaration = function() {

    var localctx = new Var_declarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, pseudoCodeParser.RULE_var_declaration);
    try {
        this.state = 59;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 39;
            this.match(pseudoCodeParser.VAR);
            this.state = 40;
            this.match(pseudoCodeParser.END);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 41;
            this.match(pseudoCodeParser.VAR);
            this.state = 42;
            this.match(pseudoCodeParser.SPACE);
            this.state = 43;
            this.match(pseudoCodeParser.ASSIG);
            this.state = 44;
            this.match(pseudoCodeParser.SPACE);
            this.state = 45;
            this.match(pseudoCodeParser.VALUE);
            this.state = 46;
            this.match(pseudoCodeParser.SPACE);
            this.state = 47;
            this.element();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 48;
            this.match(pseudoCodeParser.VAR);
            this.state = 49;
            this.match(pseudoCodeParser.SPACE);
            this.state = 50;
            this.match(pseudoCodeParser.ASSIG);
            this.state = 51;
            this.match(pseudoCodeParser.SPACE);
            this.state = 52;
            this.element();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 53;
            this.match(pseudoCodeParser.VAR);
            this.state = 54;
            this.match(pseudoCodeParser.SPACE);
            this.state = 55;
            this.match(pseudoCodeParser.FUNCT);
            this.state = 56;
            this.func_def();
            this.state = 57;
            this.match(pseudoCodeParser.END);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ElementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = pseudoCodeParser.RULE_element;
    return this;
}

ElementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ElementContext.prototype.constructor = ElementContext;

ElementContext.prototype.NUMBERDEF = function() {
    return this.getToken(pseudoCodeParser.NUMBERDEF, 0);
};

ElementContext.prototype.SPACE = function() {
    return this.getToken(pseudoCodeParser.SPACE, 0);
};

ElementContext.prototype.num_expr = function() {
    return this.getTypedRuleContext(Num_exprContext,0);
};

ElementContext.prototype.END = function() {
    return this.getToken(pseudoCodeParser.END, 0);
};

ElementContext.prototype.BOOLDEF = function() {
    return this.getToken(pseudoCodeParser.BOOLDEF, 0);
};

ElementContext.prototype.OPQUEST = function() {
    return this.getToken(pseudoCodeParser.OPQUEST, 0);
};

ElementContext.prototype.bool_expr = function() {
    return this.getTypedRuleContext(Bool_exprContext,0);
};

ElementContext.prototype.CLQUEST = function() {
    return this.getToken(pseudoCodeParser.CLQUEST, 0);
};

ElementContext.prototype.STRINGDEF = function() {
    return this.getToken(pseudoCodeParser.STRINGDEF, 0);
};

ElementContext.prototype.str_expr = function() {
    return this.getTypedRuleContext(Str_exprContext,0);
};

ElementContext.prototype.enterRule = function(listener) {
    if(listener instanceof pseudoCodeParserListener ) {
        listener.enterElement(this);
	}
};

ElementContext.prototype.exitRule = function(listener) {
    if(listener instanceof pseudoCodeParserListener ) {
        listener.exitElement(this);
	}
};




pseudoCodeParser.ElementContext = ElementContext;

pseudoCodeParser.prototype.element = function() {

    var localctx = new ElementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, pseudoCodeParser.RULE_element);
    try {
        this.state = 78;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case pseudoCodeParser.NUMBERDEF:
            this.enterOuterAlt(localctx, 1);
            this.state = 61;
            this.match(pseudoCodeParser.NUMBERDEF);
            this.state = 62;
            this.match(pseudoCodeParser.SPACE);
            this.state = 63;
            this.num_expr();
            this.state = 64;
            this.match(pseudoCodeParser.END);
            break;
        case pseudoCodeParser.BOOLDEF:
            this.enterOuterAlt(localctx, 2);
            this.state = 66;
            this.match(pseudoCodeParser.BOOLDEF);
            this.state = 67;
            this.match(pseudoCodeParser.SPACE);
            this.state = 68;
            this.match(pseudoCodeParser.OPQUEST);
            this.state = 69;
            this.bool_expr(0);
            this.state = 70;
            this.match(pseudoCodeParser.CLQUEST);
            this.state = 71;
            this.match(pseudoCodeParser.END);
            break;
        case pseudoCodeParser.STRINGDEF:
            this.enterOuterAlt(localctx, 3);
            this.state = 73;
            this.match(pseudoCodeParser.STRINGDEF);
            this.state = 74;
            this.match(pseudoCodeParser.SPACE);
            this.state = 75;
            this.str_expr();
            this.state = 76;
            this.match(pseudoCodeParser.END);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Func_defContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = pseudoCodeParser.RULE_func_def;
    return this;
}

Func_defContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Func_defContext.prototype.constructor = Func_defContext;

Func_defContext.prototype.SENTENCE = function() {
    return this.getToken(pseudoCodeParser.SENTENCE, 0);
};

Func_defContext.prototype.SPACE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(pseudoCodeParser.SPACE);
    } else {
        return this.getToken(pseudoCodeParser.SPACE, i);
    }
};


Func_defContext.prototype.expr = function() {
    return this.getTypedRuleContext(ExprContext,0);
};

Func_defContext.prototype.PARAM = function() {
    return this.getToken(pseudoCodeParser.PARAM, 0);
};

Func_defContext.prototype.param_def = function() {
    return this.getTypedRuleContext(Param_defContext,0);
};

Func_defContext.prototype.enterRule = function(listener) {
    if(listener instanceof pseudoCodeParserListener ) {
        listener.enterFunc_def(this);
	}
};

Func_defContext.prototype.exitRule = function(listener) {
    if(listener instanceof pseudoCodeParserListener ) {
        listener.exitFunc_def(this);
	}
};




pseudoCodeParser.Func_defContext = Func_defContext;

pseudoCodeParser.prototype.func_def = function() {

    var localctx = new Func_defContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, pseudoCodeParser.RULE_func_def);
    try {
        this.state = 90;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case pseudoCodeParser.SENTENCE:
            this.enterOuterAlt(localctx, 1);
            this.state = 80;
            this.match(pseudoCodeParser.SENTENCE);
            this.state = 81;
            this.match(pseudoCodeParser.SPACE);
            this.state = 82;
            this.expr();
            break;
        case pseudoCodeParser.SPACE:
            this.enterOuterAlt(localctx, 2);
            this.state = 83;
            this.match(pseudoCodeParser.SPACE);
            this.state = 84;
            this.match(pseudoCodeParser.PARAM);
            this.state = 85;
            this.match(pseudoCodeParser.SPACE);
            this.state = 86;
            this.param_def();
            this.state = 87;
            this.match(pseudoCodeParser.SPACE);
            this.state = 88;
            this.expr();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Param_defContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = pseudoCodeParser.RULE_param_def;
    return this;
}

Param_defContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Param_defContext.prototype.constructor = Param_defContext;

Param_defContext.prototype.VAR = function() {
    return this.getToken(pseudoCodeParser.VAR, 0);
};

Param_defContext.prototype.SPACE = function() {
    return this.getToken(pseudoCodeParser.SPACE, 0);
};

Param_defContext.prototype.multi_param_def = function() {
    return this.getTypedRuleContext(Multi_param_defContext,0);
};

Param_defContext.prototype.SENTENCE = function() {
    return this.getToken(pseudoCodeParser.SENTENCE, 0);
};

Param_defContext.prototype.enterRule = function(listener) {
    if(listener instanceof pseudoCodeParserListener ) {
        listener.enterParam_def(this);
	}
};

Param_defContext.prototype.exitRule = function(listener) {
    if(listener instanceof pseudoCodeParserListener ) {
        listener.exitParam_def(this);
	}
};




pseudoCodeParser.Param_defContext = Param_defContext;

pseudoCodeParser.prototype.param_def = function() {

    var localctx = new Param_defContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, pseudoCodeParser.RULE_param_def);
    try {
        this.state = 99;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 92;
            this.match(pseudoCodeParser.VAR);
            this.state = 93;
            this.match(pseudoCodeParser.SPACE);
            this.state = 94;
            this.multi_param_def();
            this.state = 95;
            this.match(pseudoCodeParser.SENTENCE);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 97;
            this.match(pseudoCodeParser.VAR);
            this.state = 98;
            this.match(pseudoCodeParser.SENTENCE);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Multi_param_defContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = pseudoCodeParser.RULE_multi_param_def;
    return this;
}

Multi_param_defContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Multi_param_defContext.prototype.constructor = Multi_param_defContext;

Multi_param_defContext.prototype.COMA = function() {
    return this.getToken(pseudoCodeParser.COMA, 0);
};

Multi_param_defContext.prototype.VAR = function() {
    return this.getToken(pseudoCodeParser.VAR, 0);
};

Multi_param_defContext.prototype.SPACE = function() {
    return this.getToken(pseudoCodeParser.SPACE, 0);
};

Multi_param_defContext.prototype.multi_param_def = function() {
    return this.getTypedRuleContext(Multi_param_defContext,0);
};

Multi_param_defContext.prototype.AND = function() {
    return this.getToken(pseudoCodeParser.AND, 0);
};

Multi_param_defContext.prototype.enterRule = function(listener) {
    if(listener instanceof pseudoCodeParserListener ) {
        listener.enterMulti_param_def(this);
	}
};

Multi_param_defContext.prototype.exitRule = function(listener) {
    if(listener instanceof pseudoCodeParserListener ) {
        listener.exitMulti_param_def(this);
	}
};




pseudoCodeParser.Multi_param_defContext = Multi_param_defContext;

pseudoCodeParser.prototype.multi_param_def = function() {

    var localctx = new Multi_param_defContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, pseudoCodeParser.RULE_multi_param_def);
    try {
        this.state = 109;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case pseudoCodeParser.COMA:
            this.enterOuterAlt(localctx, 1);
            this.state = 101;
            this.match(pseudoCodeParser.COMA);
            this.state = 102;
            this.match(pseudoCodeParser.VAR);
            this.state = 103;
            this.match(pseudoCodeParser.SPACE);
            this.state = 104;
            this.multi_param_def();
            break;
        case pseudoCodeParser.AND:
            this.enterOuterAlt(localctx, 2);
            this.state = 105;
            this.match(pseudoCodeParser.AND);
            this.state = 106;
            this.match(pseudoCodeParser.SPACE);
            this.state = 107;
            this.match(pseudoCodeParser.VAR);
            break;
        case pseudoCodeParser.SENTENCE:
            this.enterOuterAlt(localctx, 3);

            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Num_exprContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = pseudoCodeParser.RULE_num_expr;
    return this;
}

Num_exprContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Num_exprContext.prototype.constructor = Num_exprContext;

Num_exprContext.prototype.NUMBER = function() {
    return this.getToken(pseudoCodeParser.NUMBER, 0);
};

Num_exprContext.prototype.VAR = function() {
    return this.getToken(pseudoCodeParser.VAR, 0);
};

Num_exprContext.prototype.SPACE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(pseudoCodeParser.SPACE);
    } else {
        return this.getToken(pseudoCodeParser.SPACE, i);
    }
};


Num_exprContext.prototype.ADD = function() {
    return this.getToken(pseudoCodeParser.ADD, 0);
};

Num_exprContext.prototype.num_expr = function() {
    return this.getTypedRuleContext(Num_exprContext,0);
};

Num_exprContext.prototype.SUB = function() {
    return this.getToken(pseudoCodeParser.SUB, 0);
};

Num_exprContext.prototype.MULT = function() {
    return this.getToken(pseudoCodeParser.MULT, 0);
};

Num_exprContext.prototype.DIV = function() {
    return this.getToken(pseudoCodeParser.DIV, 0);
};

Num_exprContext.prototype.MOD = function() {
    return this.getToken(pseudoCodeParser.MOD, 0);
};

Num_exprContext.prototype.enterRule = function(listener) {
    if(listener instanceof pseudoCodeParserListener ) {
        listener.enterNum_expr(this);
	}
};

Num_exprContext.prototype.exitRule = function(listener) {
    if(listener instanceof pseudoCodeParserListener ) {
        listener.exitNum_expr(this);
	}
};




pseudoCodeParser.Num_exprContext = Num_exprContext;

pseudoCodeParser.prototype.num_expr = function() {

    var localctx = new Num_exprContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, pseudoCodeParser.RULE_num_expr);
    try {
        this.state = 163;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 111;
            this.match(pseudoCodeParser.NUMBER);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 112;
            this.match(pseudoCodeParser.VAR);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 113;
            this.match(pseudoCodeParser.NUMBER);
            this.state = 114;
            this.match(pseudoCodeParser.SPACE);
            this.state = 115;
            this.match(pseudoCodeParser.ADD);
            this.state = 116;
            this.match(pseudoCodeParser.SPACE);
            this.state = 117;
            this.num_expr();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 118;
            this.match(pseudoCodeParser.NUMBER);
            this.state = 119;
            this.match(pseudoCodeParser.SPACE);
            this.state = 120;
            this.match(pseudoCodeParser.SUB);
            this.state = 121;
            this.match(pseudoCodeParser.SPACE);
            this.state = 122;
            this.num_expr();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 123;
            this.match(pseudoCodeParser.NUMBER);
            this.state = 124;
            this.match(pseudoCodeParser.SPACE);
            this.state = 125;
            this.match(pseudoCodeParser.MULT);
            this.state = 126;
            this.match(pseudoCodeParser.SPACE);
            this.state = 127;
            this.num_expr();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 128;
            this.match(pseudoCodeParser.NUMBER);
            this.state = 129;
            this.match(pseudoCodeParser.SPACE);
            this.state = 130;
            this.match(pseudoCodeParser.DIV);
            this.state = 131;
            this.match(pseudoCodeParser.SPACE);
            this.state = 132;
            this.num_expr();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 133;
            this.match(pseudoCodeParser.NUMBER);
            this.state = 134;
            this.match(pseudoCodeParser.SPACE);
            this.state = 135;
            this.match(pseudoCodeParser.MOD);
            this.state = 136;
            this.match(pseudoCodeParser.SPACE);
            this.state = 137;
            this.num_expr();
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 138;
            this.match(pseudoCodeParser.VAR);
            this.state = 139;
            this.match(pseudoCodeParser.SPACE);
            this.state = 140;
            this.match(pseudoCodeParser.ADD);
            this.state = 141;
            this.match(pseudoCodeParser.SPACE);
            this.state = 142;
            this.num_expr();
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 143;
            this.match(pseudoCodeParser.VAR);
            this.state = 144;
            this.match(pseudoCodeParser.SPACE);
            this.state = 145;
            this.match(pseudoCodeParser.SUB);
            this.state = 146;
            this.match(pseudoCodeParser.SPACE);
            this.state = 147;
            this.num_expr();
            break;

        case 10:
            this.enterOuterAlt(localctx, 10);
            this.state = 148;
            this.match(pseudoCodeParser.VAR);
            this.state = 149;
            this.match(pseudoCodeParser.SPACE);
            this.state = 150;
            this.match(pseudoCodeParser.MULT);
            this.state = 151;
            this.match(pseudoCodeParser.SPACE);
            this.state = 152;
            this.num_expr();
            break;
